src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
  --background-body: #fff;
  --text-main: #36393b;
  --text-secondary: #6b6f72;
  --primary-color: #548e9b;
  --font-family-serif: Merriweather, serif;
  --font-family-sans: 'Fira Sans', sans-serif;
}

:root.theme-dark {
  --background-body: #202122;
  --text-main: #fff;
  --text-secondary: #ccc;
  --primary-color: #548e9b;
}

html {
  overflow-y: scroll;
}

@supports (scrollbar-gutter: stable) {
  html {
    overflow-y: auto;
    scrollbar-gutter: stable;
  }
}

@font-face {
	font-family: "Atkinson";
	src: url("/fonts/atkinson-regular.woff") format("woff");
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: "Atkinson";
	src: url("/fonts/atkinson-bold.woff") format("woff");
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
  font-family: "Avenir", sans-serif;
  margin: 0;
  padding: 0;
  text-align: left;
  background: var(--background-body, white);
  color: var(--text-main, rgb(var(--gray-dark)));
  transition: background 0.3s ease, color 0.3s ease;
  word-wrap: break-word;
  overflow-wrap: break-word;
  font-size: 20px;
  line-height: 1.7;
  margin-left: 2em;
  margin-right: 2em;
}

main {
	width: 720px;
	max-width: calc(100% - 2em);
	margin: auto;
	padding: 3em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 0.5rem 0;
  color: var(--text-main, rgb(var(--black)));
  line-height: 1.2;
}

h1 {
	font-size: 3.052em;
}
h2 {
	font-size: 2.441em;
}
h3 {
	font-size: 1.953em;
}
h4 {
	font-size: 1.563em;
}
h5 {
	font-size: 1.25em;
}
strong,
b {
	font-weight: 700;
}
a {
	color: var(--accent);
}
a:hover {
	color: var(--accent);
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	background-color: var(--gray-light, #e5e9f0);
  	color: var(--text-main, #000);
	border-radius: 2px;
}

.theme-dark code {
  background-color: #2e2e2e;
  color: var(--text-main, #fff);
  border-radius: 2px;
  padding: 2px 5px;
}

pre {
	padding: 1.5em;
	border-radius: 8px;
}

pre > code {
	all: unset;
}

blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0px;
	font-size: 1.333em;
	color: var(--text-secondary, rgb(var(--gray-dark)));
}

hr {
	border: none;
	border-top: 1px solid rgb(var(--gray-light));
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

@media (max-width: 720px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1em;
	}
}

@media (max-width: 720px) {
	h1, h2, h3, h4, h5, h6 {
		font-size: 0.85em;
	}
	
	p{
		font-size: 0.9em;
	}
}

